Outbox dispatcher added

--- a/src/FlavourVault.Web/appsettings.Development.json
+++ b/src/FlavourVault.Web/appsettings.Development.json
@@ -7,12 +7,22 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DbConnectionString": ""
+    "DbConnectionString": "",
+    "AzureServiceBusConnectionString": ""
   },
   "Auth": {
     "JwtSecret": "really really REALLY long secret key goes here",
     "Issuer": "https://app.flavourvault.com",
     "Audience": "https://app.flavourvault.com"
+  },
+  "MessageBus": {
+    "Topics": "EmailMessage"
+  },
+  "Resilience": {
+    "MaxRetryAttempts": "3",
+    "DelayMilliseconds": "100",
+    "UseJitter": "True",
+    "BackoffType": "Exponential"
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
