--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ logs/
 *.userosscache
 *.sln.docstates
 *.env
-flavourvault-db/data
+flavourvault-db/
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
