--- a/src/.editorconfig
+++ b/src/.editorconfig
@@ -262,3 +262,4 @@ dotnet_style_namespace_match_folder = true:suggestion
 dotnet_style_predefined_type_for_locals_parameters_members = true:silent
 dotnet_diagnostic.CA2007.severity = none
 dotnet_diagnostic.CA1062.severity = none
+dotnet_diagnostic.CA1848.severity = none
