--- a/src/FlavourVault.Audit/FlavourVault.Audit.csproj
+++ b/src/FlavourVault.Audit/FlavourVault.Audit.csproj
@@ -1,11 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <OutputType>Library</OutputType>
+    <ImplicitUsings>enable</ImplicitUsings>    
   </PropertyGroup>
+  <ItemGroup>
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\FlavourVault.SharedCore\FlavourVault.SharedCore.csproj" />
