--- a/src/FlavourVault.Recipes/FlavourVault.Recipes.csproj
+++ b/src/FlavourVault.Recipes/FlavourVault.Recipes.csproj
@@ -1,11 +1,15 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>    
     <ImplicitUsings>enable</ImplicitUsings>    
     <OutputType>Library</OutputType>
   </PropertyGroup>
-
   <ItemGroup>
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\FlavourVault.OutboxDispatcher\FlavourVault.OutboxDispatcher.csproj" />
+    <ProjectReference Include="..\FlavourVault.Results\FlavourVault.Results.csproj" />
     <ProjectReference Include="..\FlavourVault.Recipes.Contracts\FlavourVault.Recipes.Contracts.csproj" />
     <ProjectReference Include="..\FlavourVault.SharedCore\FlavourVault.SharedCore.csproj" />
   </ItemGroup>
@@ -13,6 +17,10 @@
   <ItemGroup>
     <Folder Include="Integrations\" />
     <Folder Include="Migrations\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Resilience" />
   </ItemGroup>
 
 </Project>
