--- a/src/FlavourVault.Security.Contracts/FlavourVault.Security.Contracts.csproj
+++ b/src/FlavourVault.Security.Contracts/FlavourVault.Security.Contracts.csproj
@@ -3,4 +3,8 @@
   <PropertyGroup>    
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FlavourVault.Results\FlavourVault.Results.csproj" />
+  </ItemGroup>
+
 </Project>
