--- a/src/FlavourVault.Security/FlavourVault.Security.csproj
+++ b/src/FlavourVault.Security/FlavourVault.Security.csproj
@@ -1,15 +1,18 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>   
     <ImplicitUsings>enable</ImplicitUsings>
     <OutputType>Library</OutputType>
   </PropertyGroup>
-
+  <ItemGroup>
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\FlavourVault.Results\FlavourVault.Results.csproj" />
     <ProjectReference Include="..\FlavourVault.Security.Contracts\FlavourVault.Security.Contracts.csproj" />
     <ProjectReference Include="..\FlavourVault.SharedCore\FlavourVault.SharedCore.csproj" />    
   </ItemGroup>
