--- a/src/FlavourVault.SharedCore/FlavourVault.SharedCore.csproj
+++ b/src/FlavourVault.SharedCore/FlavourVault.SharedCore.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FlavourVault.Results\FlavourVault.Results.csproj" />
+  </ItemGroup>
+
 </Project>
