--- a/src/FlavourVault.Web/FlavourVault.Web.csproj
+++ b/src/FlavourVault.Web/FlavourVault.Web.csproj
@@ -7,9 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>    
-    <PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" />        
+    <PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" />    
+    <PackageReference Include="Azure.Messaging.ServiceBus" />        
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" />        
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" />    
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" />        
+    <PackageReference Include="Microsoft.Extensions.Azure" />    
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" />    
     <PackageReference Include="Serilog.Enrichers.Environment" />    
     <PackageReference Include="Serilog.Enrichers.Process" />    
@@ -21,6 +23,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\FlavourVault.OutboxDispatcher\FlavourVault.OutboxDispatcher.csproj" />
+    <ProjectReference Include="..\FlavourVault.Results\FlavourVault.Results.csproj" />
     <ProjectReference Include="..\FlavourVault.Audit.Contracts\FlavourVault.Audit.Contracts.csproj" />
     <ProjectReference Include="..\FlavourVault.Audit\FlavourVault.Audit.csproj" />
     <ProjectReference Include="..\FlavourVault.Recipes.Contracts\FlavourVault.Recipes.Contracts.csproj" />
