--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -7,19 +7,6 @@ networks:
     external: true
   
 services:
-  flavourvault-service:
-    image: ${DOCKER_REGISTRY-}flavourvault-service
-    build:
-      context: .
-      dockerfile: FlavourVault.Web/Dockerfile
-    ports:
-        - 5000:8080
-        - 5001:8081
-    networks:
-        - local_dev
-    depends_on:
-      flavourvault-db:
-        condition: service_started 
   flavourvault-db:
     image: mcr.microsoft.com/mssql/server:2022-latest
     restart: no
@@ -40,4 +27,36 @@ services:
       - ./flavourvault-db/log:/var/opt/mssql/log
     networks:
         - local_dev
-
+  flavourvault-azureservicebus:
+    container_name: "flavourvault-azureservicebus"
+    image: mcr.microsoft.com/azure-messaging/servicebus-emulator:latest
+    volumes:
+      - "${CONFIG_PATH}:/ServiceBus_Emulator/ConfigFiles"
+    ports:
+      - "5672:5672"
+    environment:
+      SQL_SERVER: flavourvault-db  
+      MSSQL_SA_PASSWORD: ${DB_PASSWORD}
+      ACCEPT_EULA: ${ACCEPT_EULA}
+    depends_on:
+      flavourvault-db:
+        condition: service_started 
+    networks:
+        - local_dev
+  flavourvault-service:
+    image: ${DOCKER_REGISTRY-}flavourvault-service
+    build:
+      context: .
+      dockerfile: FlavourVault.Web/Dockerfile
+    ports:
+        - 5000:8080
+        - 5001:8081
+    networks:
+        - local_dev
+    depends_on:
+      flavourvault-db:
+        condition: service_started 
+      flavourvault-azureservicebus:
+        condition: service_started 
+  
+  
